Some changes in responsive

--- a/Public/style.css
+++ b/Public/style.css
@@ -310,13 +310,19 @@ body{
     cursor: pointer;
 }
 
-@media only screen and (max-width:500px){
+@media only screen and (max-width:550px){
     .products{
         width: 300px;
     }
 }
-@media only screen and (max-width:430px){
+
+@media only screen and (max-width:480px){
     .products{
         width: 230px;
+    }
+}
+@media only screen and (max-width:400px){
+    .products{
+        width: 200px;
     }
 }
